--- a/calendar.html
+++ b/calendar.html
@@ -189,8 +189,8 @@
 
         function previous(){
             if(marzo.style.opacity==1 && enero.style.opacity==0 && febrero.style.opacity==0){
-                 marzo.style.opacity==0;
-                 febrero.style.opacity==1;
+                 marzo.style.opacity=0;
+                 febrero.style.opacity=1;
              } 
 
              else if(febrero.style.opacity==1 && enero.style.opacity==0 && marzo.style.opacity==0){
@@ -200,8 +200,8 @@
         }
         function next(){
             if(enero.style.opacity==1 && marzo.style.opacity==0 && febrero.style.opacity==0){
-                 enero.style.opacity==0;
-                 febrero.style.opacity==1;
+                 enero.style.opacity=0;
+                 febrero.style.opacity=1;
              } 
             else if(febrero.style.opacity==1 && enero.style.opacity==0 && marzo.style.opacity == 0){
                  febrero.style.opacity=0;
